# Carbon-Tray-Applet

./: CarbonTrayApplet.plugin.in  README.md  meson.build
data/: meson.build  plugin.gresource.xml
debian/: changelog  control  copyright  rules  watch
debian/upstream/: metadata
schema/: org.ubuntubudgie.plugins.tray.gschema.xml
scripts/: mkrelease.sh
src/: CarbonTrayApplet.vala  meson.build
